# gkiu

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  README.asciidoc  TODO  aclocal.m4  cleanup.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am
data/pictures/: Makefile.am
m4/: Makefile.am
modules/: Makefile.am  README.zh_CN
modules/iMode/: Makefile.am  iMode.py
modules/imui/: Makefile.am  imui.py  imui_windows.py
modules/keyring/: Makefile.am  keyring.c  keyring.gir  keyring.h
modules/messenger/: Makefile.am  messenger.py
old/: chatlog.c  chatlog.h  uilogin.c  uilogin.glade  uilogin.h  uilogin2.glade
po/: LINGUAS  POTFILES  POTFILES.in  en_US.pot  missing  zh_CN.po
src/: #plugin-object.c#  .#plugin-object.c  Makefile.am  about.c  about.h  app.c  app.h  config.c  config.h  dbus.c  dbus.h  gkiu  gkiu-dbus-object-glue.h  gkiu-dbus-object.c  gkiu-dbus-object.h  gkiu-dbus-object.xml  main.c  main.h  manager.c  manager.h  misc.c  misc.h  plugin-object.c  plugin-object.h  shell-glue.h  shell.c  shell.h  shell.xml
